--- a/includes/footer.html
+++ b/includes/footer.html
@@ -6,10 +6,26 @@
 				[Links to other sites]
 			</div>
 			<div class="col-sm-4">
-				
+				<ul>
+					<li><a href="http://sri.cals.cornell.edu/">Main SRI Site</a></li>
+				</ul>
 			</div>
 			<div class="col-sm-4">
-				[Donate / Support / Social Media Links]
+				<ul>
+					<li class="head">Facebook</li>
+					<li><a href="https://www.facebook.com/SRIRice">SRI Facebook Page</a></li>
+					<li><a href="https://www.facebook.com/SicaAmericaLatina">SICA América Latina </a></li>
+					<li><a href="https://www.facebook.com/groups/SRI.innovators/">SRI Equipment Innovators Exchange</a></li>
+				</ul>
+				<ul>
+					<li class="head">Twitter</li>
+					<li><a href="https://twitter.com/SRIRice">@SRIRice</a></li>
+					<li><a href="https://twitter.com/SICAlatina">@SICAlatina</a></li>
+				</ul>
+				<ul>
+					<li class="head">LinkedIn</li>
+					<li><a href="http://www.linkedin.com/groups/SRI-International-Network-Resources-Center-3928316">SRI International Network and Resources Center</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
