--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="./index.php">SRI-Rice</a>
+      <a class="navbar-brand" href="./index.php"><img src="./img/logo-main.png" width="160"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
